// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateNodeInput - simpleFlow, the children nodes are not updated 1`] = `
{
  "input": {
    "data": "Hello World",
  },
}
`;

exports[`updateNodeInput - singleNodeFlow 1`] = `
{
  "input": {
    "data": "Hello World",
  },
  "status": "idle",
}
`;
